--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
