--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "axios": "^1.4.0",
     "firebase": "^9.23.0",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
