--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,6 @@
     "axios": "^1.4.0",
     "firebase": "^9.23.0",
     "react": "^18.2.0",
-    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.1.1",
@@ -22,6 +21,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "typewriter-effect": "^2.20.1",
