implemented cart system + wishlist system +search queries mongodb

--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,16 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "firebase": "^9.23.0",
+    "jquery": "^3.7.0",
+    "lodash": "^4.17.21",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-image-file-resizer": "^0.4.8",
+    "react-modal-image": "^2.6.0",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
